--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -65,16 +65,16 @@
         "search": "搜索"
     },
     "orderengine": {
-        "title": "State Machine",
-        "queue": "Queue",
+        "title": "ch State Machine",
+        "queue": "ch Queue",
         "item": {
-          "recover": "Recover",
-          "bill": "Bill",
-          "failed": "Failed",
-          "hold": "Hold",
-          "pending": "Pending",
-          "shipped": "Shipped",
-          "delivered": "Delivered"
+          "recover": "ch Recover",
+          "bill": "ch Bill",
+          "failed": "ch Failed",
+          "hold": "ch Hold",
+          "pending": "ch Pending",
+          "shipped": "ch Shipped",
+          "delivered": "ch Delivered"
         },
         "schema": {
             "title": "状态机流程",
@@ -99,12 +99,12 @@
                 "main": "队列消息",
                 "sub": "再付费编号"
             },
-            "view": "View Rebill",
-            "id": "ID",
-            "billed": "Bill at",
-            "created": "Created at",
-            "amount": "Amount",
-            "nodata": "No Rebills found."
+            "view": "ch View Rebill",
+            "id": "ch ID",
+            "billed": "ch Bill at",
+            "created": "ch Created at",
+            "amount": "ch Amount",
+            "nodata": "ch No Rebills found."
         },
         "rebill": {
             "history": {
@@ -146,14 +146,14 @@
         "dismiss": "搁置"
     },
     "advancedfilter": {
-        "day": "1D",
-        "week": "1W",
-        "month": "1M",
-        "3month": "3M",
-        "6month": "6M",
-        "year": "1Y",
-        "yeartodate": "YTD",
-        "all": "ALL",
+        "day": "c1D",
+        "week": "c1W",
+        "month": "c1M",
+        "3month": "c3M",
+        "6month": "c6M",
+        "year": "c1Y",
+        "yeartodate": "cYTD",
+        "all": "cALL",
         "from": "从",
         "to": "至",
         "filters": "过滤",
@@ -179,8 +179,8 @@
         "success": "成功",
         "decline": "拒绝",
         "error": "错误",
-        "refreshdashboardtext": "Refresh Dashboard. Last updated:",
-        "refreshreporttext": "Refresh Report"
+        "refreshdashboardtext": "ch Refresh Dashboard. Last updated:",
+        "refreshreporttext": "ch Refresh Report"
     },
     "forminputs": {
         "fullname": "全名",
@@ -286,9 +286,9 @@
     },
     "dashboard": {
         "item": {
-          "newsale": "New Sales",
-          "main": "Main",
-          "upsell": "Upsells",
+          "newsale": "ch New Sales",
+          "main": "ch Main",
+          "upsell": "ch Upsells",
           "rebill": "Rebills",
           "decline": "Declines",
           "error": "Errors"
@@ -496,7 +496,7 @@
             "price": "价格",
             "id": "ID"
         },
-        "filter": "Filter Results",
+        "filter": "ch Filter Results",
         "category": "类别",
         "refined": "精选结果",
         "reset": "重置搜索",
@@ -544,7 +544,7 @@
         }
     },
     "account": {
-        "title": "Account",
+        "title": "ch Account",
         "index": {
             "title": "帐号",
             "header": {
@@ -1466,10 +1466,10 @@
         "cancel": "取消"
     },
     "associatedialog": {
-        "text": "Select entity to associate",
-        "associate": "ASSOCIATE",
-        "cancel": "CANCEL",
-        "entity": "Entity"
+        "text": "ch Select entity to associate",
+        "associate": "ch ASSOCIATE",
+        "cancel": "ch CANCEL",
+        "entity": "ch Entity"
     },
     "inviteuser": {
         "title": "邀请新用户",
@@ -1524,16 +1524,16 @@
         }
     },
     "share": {
-        "title": "Share",
-        "copy": "Copy to clipboard"
+        "title": "ch Share",
+        "copy": "ch Copy to clipboard"
     },
     "pagination": {
-        "rowsperpage": "Rows per page"
+        "rowsperpage": "ch Rows per page"
     },
     "snack": {
-      "error": "Error occured, please try again",
-      "updated": "Updated Successfully!",
-      "created": "Created Successfully!",
-      "deleted": "Deleted Successfully!"
+      "error": "ch Error occured, please try again",
+      "updated": "ch Updated Successfully!",
+      "created": "ch Created Successfully!",
+      "deleted": "ch Deleted Successfully!"
     }
 }
