Add ch in front of missing CH translations

--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -289,9 +289,9 @@
           "newsale": "ch New Sales",
           "main": "ch Main",
           "upsell": "ch Upsells",
-          "rebill": "Rebills",
-          "decline": "Declines",
-          "error": "Errors"
+          "rebill": "ch Rebills",
+          "decline": "ch Declines",
+          "error": "ch Errors"
         },
         "eventsfunnel": {
             "title": "漏斗事件",
