Add API Keys section to sidenav

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -56,6 +56,11 @@
       "account": "Accounts",
       "bill": "Bills",
       "role": "Roles",
+      "key": {
+        "title": "API Keys",
+        "signingstring": "User Signing Strings",
+        "accesskey": "Access Keys"
+      },
       "documentation": {
         "title": "Documentation",
         "graphql": "GraphQL",
