--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -56,6 +56,11 @@
         "account": "Konten",
         "bill": "Rechnungen",
         "role": "Nutzerrolllen",
+        "key": {
+          "title": "API Keys",
+          "signingstring": "User Signing Strings",
+          "accesskey": "Access Keys"
+        },
         "documentation": {
           "title": "Dokumentation",
           "graphql": "GraphQL",
