--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -545,6 +545,25 @@
         "schedule": {
           "title": "Produktzyklus Infos",
           "schedules": "Produktzyklen"
+        },
+        "merchantprovider": {
+          "title": "Merchant Provider Info",
+          "enabled": "Enabled",
+          "allowprepaid": "Allow Prepaid",
+          "gatewayname": "Gateway Name",
+          "gatewaytype": "Gateway Type"
+        },
+        "creditcard": {
+          "title": "Credit Card Info",
+          "name": "Customer Name",
+          "expiration": "Expiration",
+          "number": "Number",
+          "ccv": "CCV"
+        },
+        "affiliate": {
+          "title": "Affiliate Info",
+          "name": "Name",
+          "affiliateid": "Affiliate ID"
         }
       }
     },
@@ -766,6 +785,9 @@
         "nodata": "Keine Kreditkarte gefunden.",
         "expiration": "Verfallsdatum"
       }
+    },
+    "creditcard": {
+      "title": "Credit Card"
     },
     "bill": {
       "index": {
@@ -1411,7 +1433,7 @@
         "nodata": "Keine Merchant Anbieter Gefunden."
       }
     },
-    "merchant": {
+    "merchantprovider": {
       "title": "Merchant Anbieter",
       "index": {
         "title": "Merchant Anbieter",
