--- a/src/app/translation/translations/languages.json
+++ b/src/app/translation/translations/languages.json
@@ -18,5 +18,10 @@
     "name": "Armenian",
     "filename": "hy.json",
     "locale": "hy"
+  },
+  {
+    "name": "Hindi",
+    "filename": "hi.json",
+    "locale": "hi"
   }
 ]
